# ragl

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ragl/: main.py
ragl/ingest/: base.py  csv.py
ragl/retrieve/: embedder.py  vector_store.py
ragl/scripts/: ingest_csv.py
