[tool.poetry]
name = "ragl"
version = "0.1.0"
description = "A local RAG pipeline for large document sets."
authors = ["Toby"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.0.0"
faiss-cpu = "^1.7.4"
chromadb = "^0.4.3"
sentence-transformers = "^2.3.0"
ollama = "^0.1.0"
tqdm = "^4.66.0"
scipy = "^1.11.0"
requests = "^2.31.0"
tokenizers = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
